--- a/FE/src/app/pages/mesa-control/validacion/validacion.component.html
+++ b/FE/src/app/pages/mesa-control/validacion/validacion.component.html
@@ -382,12 +382,22 @@
               </td>
             </ng-container>
 
+            <!-- Columna Fecha de Liberación -->
+            <ng-container matColumnDef="fechaLiberacion">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header="fechaLiberacion" class="w-48 py-2 bg-gray-50 text-xs font-medium text-gray-700 text-left">
+                Fecha de Liberación
+              </th>
+              <td mat-cell *matCellDef="let item" class="py-2 text-xs text-gray-700 text-left">
+                {{ item.fechaLiberacion | date:'yyyy-MM-dd' }}
+              </td>
+            </ng-container>
+
             <!-- Columna Registro -->
             <ng-container matColumnDef="registro">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header="registro" class="w-48 py-2 bg-gray-50 text-xs font-medium text-gray-700 text-center">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header="registro" class="w-48 py-2 bg-gray-50 text-xs font-medium text-gray-700 text-left">
                 Registro
               </th>
-              <td mat-cell *matCellDef="let item" class="py-2 text-xs text-gray-700 text-center">
+              <td mat-cell *matCellDef="let item" class="py-2 text-xs text-gray-700 text-left">
                 {{ item.registro }}
               </td>
             </ng-container>
