--- a/FE/src/app/pages/dashboards/components/widgets/widget-trend-chart/widget-trend-chart.component.html
+++ b/FE/src/app/pages/dashboards/components/widgets/widget-trend-chart/widget-trend-chart.component.html
@@ -1,6 +1,16 @@
 <div class="card h-full">
   <div class="flex-none border-b py-2 px-6 flex items-center">
     <h2 class="m-0 title flex-auto">Tendencia de Expedientes</h2>
+    
+    <!-- Filtro de año -->
+    <mat-form-field appearance="outline" class="year-filter">
+      <mat-label>Año</mat-label>
+      <mat-select [formControl]="yearControl">
+        <mat-option *ngFor="let year of availableYears" [value]="year">
+          {{ year }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
   </div>
 
   <div class="flex-1 pt-3 pr-4">
