--- a/FE/src/app/pages/dashboards/components/widgets/widget-trend-chart/widget-trend-chart.component.scss
+++ b/FE/src/app/pages/dashboards/components/widgets/widget-trend-chart/widget-trend-chart.component.scss
@@ -3,4 +3,13 @@
   .card {
     height: 100%;
   }
+
+  .year-filter {
+    min-width: 100px;
+    margin-left: 1rem;
+    
+    .mat-mdc-form-field {
+      font-size: 14px;
+    }
+  }
 }
